environments/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cicd
  namespace: dev
spec:
  revisionHistoryLimit: 0 # Default to 10 if not specified
  replicas: 2
  selector:
    matchLabels:
      app: hello-cicd
  template:
    metadata:
      labels:
        app: hello-cicd
    spec:
      containers:
      - name: hello-cicd
        image: ghcr.io/raone060/hello-cicd:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
