environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-cicd-service
  namespace: dev
spec:
  selector:
    app: hello-cicd
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
